# Stock-Recommendation-Agent

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
deploy/: build_lambda.sh  deploy_aws.sh
docs/: DEPLOYMENT.md  SES_SETUP.md
infra/: template.yaml
src/stock_agent/: __init__.py  cli.py  config.py  lambda_handler.py  models.py  orchestrator.py  universe.py  universe_data.py
src/stock_agent/analysis/: __init__.py  backtest.py
src/stock_agent/collectors/: __init__.py  news_collector.py  reddit_collector.py  stocktwits_collector.py  ticker_news.py
src/stock_agent/delivery/: __init__.py  ses_sender.py
src/stock_agent/extraction/: __init__.py  ticker_extractor.py  tickers_data.py
src/stock_agent/fundamentals/: __init__.py  price_factors.py  yfinance_fetcher.py
src/stock_agent/report/: __init__.py  backtest_report.py  builder.py
src/stock_agent/scoring/: __init__.py  engine.py  short_term.py
src/stock_agent/sentiment/: __init__.py  base.py  vader.py
tests/: conftest.py  test_backtest.py  test_backtest_report.py  test_config.py  test_fundamentals.py  test_holdings.py  test_lambda_handler.py  test_news_collector.py  test_orchestrator_e2e.py  test_price_factors.py  test_reddit_collector.py  test_report_builder.py  test_risk_tilt.py  test_scoring_engine.py  test_scoring_subscores.py  test_sector_relative.py  test_sentiment.py  test_ses_sender.py  test_short_term.py  test_stocktwits_collector.py  test_storage_history.py  test_storage_watchlist.py  test_ticker_extractor.py  test_universe.py
(+2 files in other folders)
