[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-recommendation-agent"
version = "0.1.0"
description = "Daily long-term stock recommendation agent: discovery, fundamentals-dominant scoring, emailed report."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.34,<2",
    "praw>=7.7,<9",
    "feedparser>=6.0,<7",
    "vaderSentiment>=3.3,<4",
    "yfinance>=0.2,<2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0,<9", "moto[dynamodb]>=5.0,<6"]

[project.scripts]
stock-agent = "stock_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
